# DoItForMe

./: README.md  apply_inst.json  design_inst.json  package-lock.json  package.json  proposal_inst.json  specs_inst.json  status.json  tasks_inst.json
doitforme-api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_log.txt  debug_output.txt  docker-compose.yml  full_test_output.txt  output.txt  pyproject.toml  test_output.txt
doitforme-api/.github/workflows/: ci.yml
doitforme-api/alembic/: env.py
doitforme-api/alembic/versions/: 0001_identity_foundation.py  0002_auth_sessions.py  0003_tasks.py  0004_proposals_and_task_pivot.py  48325cf53ee5_add_balance_and_transactions.py  8d709bb6080f_add_proof_image_url_and_message_image_.py  cd8e1d2e95e0_add_messages_table.py  f34fafc035cf_add_reviews_table.py
doitforme-api/app/: main.py
doitforme-api/app/api/: deps.py
doitforme-api/app/core/: config.py  exceptions.py  logging.py  response.py  security.py  ws_manager.py
doitforme-api/app/db/: session.py
doitforme-api/app/models/: __init__.py  auth_session.py  message.py  proposal.py  review.py  task.py  transaction.py  user.py
doitforme-api/app/repositories/: auth_session_repository.py  message_repository.py  proposal_repository.py  review_repository.py  task_repository.py  transaction_repository.py  user_repository.py
doitforme-api/app/schemas/: auth.py  common.py  messages.py  proposals.py  reviews.py  tasks.py  users.py  wallet.py
doitforme-api/app/services/: auth_service.py  file_storage.py  task_service.py  (+6 more)
doitforme-api/tests/: conftest.py
(+59 files in other folders)
